change avtar giang sinh

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -13,7 +13,7 @@
                             <div class="entry-content intro" data-animation="rotate-1">
                                 
                                 <div class="profile-image">
-                                	<img alt="profile" src="/template/images/site/avatar_main_square.jpg">
+                                	<img style="max-height: 447px;" alt="profile" src="https://imgur.com/390zlza.jpg">
                                 </div>  
                                 
                                 <h2><em>Hi.</em> I'm Dat</h2>
