--- a/views/dashboard/add-post.ejs
+++ b/views/dashboard/add-post.ejs
@@ -37,6 +37,10 @@
                                                         </select>
                                                     </div>
                                                     <div class="mb-3">
+                                                        <label for="example-text-input" class="form-label">Từ khóa tìm kiếm</label>
+                                                        <input class="form-control" type="text" value="" placeholder="business analyst, product owner" id="tag">
+                                                    </div>
+                                                    <div class="mb-3">
                                                         <label for="example-email-input" class="form-label">Hình ảnh</label>
                                                         <input class="form-control" type="file" value="" id="image-post">
                                                         <br>
