--- a/views/dashboard/update-post.ejs
+++ b/views/dashboard/update-post.ejs
@@ -41,6 +41,10 @@
                                                         </select>
                                                     </div>
                                                     <div class="mb-3">
+                                                        <label for="example-text-input" class="form-label">Tag</label>
+                                                        <input class="form-control" type="text" value="<%=infoBlog.tag || 'tothanhdat, blog itba, blog business analyst, blog product onwer'%>" id="tag">
+                                                    </div>
+                                                    <div class="mb-3">
                                                         <label for="example-email-input" class="form-label">Hình ảnh</label>
                                                         <input class="form-control" type="file" value="" id="image-post" onchange="readURL(this)">
                                                         <br>
