--- a/views/pages/info-post.ejs
+++ b/views/pages/info-post.ejs
@@ -17,7 +17,7 @@
     <meta name="title" content="Blog của Đạt">
     <meta name="description" content="Chúc bạn có trải nghiệm vui vẻ nhé!!">
 
-    <meta name="keywords" content="blog itba, itba, blog lap trinh, tothanhdat, itba sharing, itba momo, deploy nodejs matbao, deploy nodejs mongodb">
+    <meta name="keywords" content="<%=infoBlog.tag || 'tothanhdat, blog itba, blog business analyst, blog product onwer'%>">
     
     <title><%=infoBlog.title%></title>
     
