--- a/views/pages/header.ejs
+++ b/views/pages/header.ejs
@@ -11,11 +11,11 @@
     <meta name="keywords" content="blog itba, itba, blog lap trinh">
     <meta name="author" content="Pixelwars">
 
-    <meta property="og:url"                content="https://tothanhdat.online/" />
+    <meta property="og:url"                content="https://tothanhdat.com/" />
     <meta property="og:type"               content="article" />
     <meta property="og:title"              content="Blog của Đạt" />
     <meta property="og:description"        content="Chúc bạn có trải nghiệm vui vẻ 😊" />
-    <meta property="og:image"              content="https://tothanhdat.online/template/images/site/avatar_main_square.jpg" />
+    <meta property="og:image"              content="https://i.imgur.com/cEhyfoT.jpg" />
     
     <title>Blog của Đạt</title>
     
