--- a/views/pages/info-post.ejs
+++ b/views/pages/info-post.ejs
@@ -7,7 +7,7 @@
 
     <meta charset="utf-8">
 
-    <meta property="og:url"                content="https://tothanhdat.com/blog/<%=infoBlog.slug%> " />
+    <meta property="og:url"                content="https://tothanhdat.com/blog/bai-viet/<%=infoBlog.slug%> " />
     <meta property="og:type"               content="article" />
     <meta property="og:title"              content="<%=infoBlog.title %>" />
     <meta property="og:description"        content="<%=infoBlog.shortDesc || 'Xin chào các bạn, mình là Đạt. Hiện tại mình là 1 ITBA, mình thích chụp ảnh, đá bóng và các công việc liên quan đến lĩnh vực IT' %>" />
