fix bug lost tag

--- a/views/dashboard/add-post.ejs
+++ b/views/dashboard/add-post.ejs
@@ -139,6 +139,7 @@
             //let image 	    = $('#image').val().trim();
             let shortDesc 	= $('.shortDesc').val().trim();
             let category 	= $('#category').val().trim();
+            let tag 	    = $('#tag').val().trim();
             let content 	= CKEDITOR.instances['editor'].getData();
 
 		    var formData = new FormData();
@@ -161,15 +162,15 @@
                     var photo = response.data.link;
                     var photo_hash = response.data.deletehash;
 
-                    console.log({ image: photo, title, shortDesc, category, content });
+                    console.log({ image: photo, title, shortDesc, category, content, tag });
 
-                    if(!title || !photo || !category || !content || !shortDesc){
+                    if(!title || !photo || !category || !content || !shortDesc || !tag){
                         return toastr.info('Vui lòng nhập đây đủ!')
                     } else{
                         $.ajax({
                             url: `/blog/add`,
                             method: 'POST',
-                            data: { image: photo, title, shortDesc, category, content },
+                            data: { image: photo, title, shortDesc, category, content, tag },
                             success: resp => {
                                 console.log({ resp })
                                 if(!resp.error){
