--- a/views/pages/info-post.ejs
+++ b/views/pages/info-post.ejs
@@ -15,7 +15,7 @@
     
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="title" content="Blog của Đạt">
-    <meta name="description" content="Chúc bạn có trải nghiệm vui vẻ nhé!!">
+    <meta name="description" content="<%=infoBlog.shortDesc%>">
 
     <meta name="keywords" content="<%=infoBlog.tag || 'tothanhdat, blog itba, blog business analyst, blog product onwer'%>">
     
