--- a/views/dashboard/sidebar.ejs
+++ b/views/dashboard/sidebar.ejs
@@ -17,6 +17,13 @@
                 </li>
 
                 <li>
+                    <a href="/admin/list-comment">
+                        <i data-feather="file-text"></i>
+                        <span data-key="t-dashboard">List comment</span>
+                    </a>
+                </li>
+
+                <li>
                     <a href="javascript: void(0);" class="has-arrow">
                         <i data-feather="grid"></i>
                         <span data-key="t-apps">Apps</span>
