--- a/views/dashboard/update-post.ejs
+++ b/views/dashboard/update-post.ejs
@@ -131,7 +131,7 @@
             method: 'GET',
             success: resp => {
                 let infoBlog = resp.data;
-                console.log({ infoBlog });
+                //console.log({ infoBlog });
                 if(!resp.error){
                     CKEDITOR.instances['editor'].setData(infoBlog.content);
                 }else{
@@ -167,12 +167,12 @@
                     },
                     data: formData,
                     success: function(response) {
-                        console.log({ response });
+                        //console.log({ response });
 
                         var photo = response.data.link;
                         var photo_hash = response.data.deletehash;
 
-                        console.log({ image: photo, title, shortDesc, category, content, tag });
+                        //console.log({ image: photo, title, shortDesc, category, content, tag });
 
                         if(!title || !content){
                             return toastr.info('Vui lòng nhập đây đủ!')
@@ -182,7 +182,7 @@
                                 method: 'POST',
                                 data: { image: photo, title, shortDesc, category, content, tag },
                                 success: resp => {
-                                    console.log({ resp })
+                                    //console.log({ resp })
                                     if(!resp.error){
                                         toastr['success']('Cập nhật bài viết thành công', 'Thông báo');
                                         setTimeout(() => {
