--- a/views/dashboard/update-post.ejs
+++ b/views/dashboard/update-post.ejs
@@ -42,7 +42,7 @@
                                                     </div>
                                                     <div class="mb-3">
                                                         <label for="example-text-input" class="form-label">Tag</label>
-                                                        <input class="form-control" type="text" value="<%=infoBlog.tag || 'tothanhdat, blog itba, blog business analyst, blog product onwer'%>" id="tag">
+                                                        <input class="form-control" type="text" value="<%=infoBlog.tag || 'business analyst là gì, tự học business analyst, tài liệu tự học business analyst, business analyst intern, tuyển dụng business analyst'%>" id="tag">
                                                     </div>
                                                     <div class="mb-3">
                                                         <label for="example-email-input" class="form-label">Hình ảnh</label>
