--- a/views/pages/header.ejs
+++ b/views/pages/header.ejs
@@ -39,7 +39,7 @@
     <link rel="stylesheet" type="text/css" href="/template/js/shortcodes/shortcodes.css">
     <link rel="stylesheet" type="text/css" href="/template/css/768.css">
     <link rel="stylesheet" type="text/css" href="/template/css/992.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.css" integrity="sha512-3pIirOrwegjM6erE5gPSwkUzO+3cTjpnV9lexlNZqvupR64iZBnOOTiiLPb9M36zpMScbmUNIcHUqKD47M719g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.css" integrity="sha512-3pIirOrwegjM6erE5gPSwkUzO+3cTjpnV9lexlNZqvupR64iZBnOOTiiLPb9M36zpMScbmUNIcHUqKD47M719g==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
     
 	<!-- INITIAL SCRIPTS -->
 	<script src="/template/js/modernizr.min.js"></script>
@@ -52,7 +52,7 @@
 
         gtag('config', 'G-BRSBJ4DT7Q');
     </script>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6866668022954049" crossorigin="anonymous"></script>
+    <!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6866668022954049" crossorigin="anonymous"></script> -->
 
 
 </head>
