--- a/views/pages/header.ejs
+++ b/views/pages/header.ejs
@@ -15,7 +15,7 @@
     <meta property="og:type"               content="article" />
     <meta property="og:title"              content="Blog của Đạt" />
     <meta property="og:description"        content="Chúc bạn có trải nghiệm vui vẻ 😊" />
-    <meta property="og:image"              content="https://i.imgur.com/cEhyfoT.jpg" />
+    <meta property="og:image"              content="https://imgur.com/Mx1iwLA.jpg" />
     
     <title>Blog của Đạt</title>
     
