--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -13,7 +13,7 @@
                             <div class="entry-content intro" data-animation="rotate-1">
                                 
                                 <div class="profile-image">
-                                	<img style="max-height: 300px;" alt="profile" src="https://imgur.com/Mx1iwLA">
+                                	<img style="max-height: 300px;" alt="profile" src="https://imgur.com/Mx1iwLA.jpg">
                                 </div>  
                                 
                                 <h2><em>Hi.</em> I'm Dat</h2>
