--- a/views/pages/list-post-category.ejs
+++ b/views/pages/list-post-category.ejs
@@ -37,13 +37,13 @@
                     <article class="hentry post has-post-thumbnail slideUp animated" style="position: absolute; left: 0px; top: 0px; width: 49.9884%; box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;">
                         <!-- .featured-image -->
                         <div class="featured-image">
-                            <a href="/blog/bai-viet/<%=blog.slug%>"><img style="flex-shrink: 0; min-width: 100%; max-height: 240px; object-fit: cover;" width="1440" height="1440" src="<%=blog.image%>" alt="blog-image"></a>
+                            <a href="/blog/<%=blog.slug%>"><img style="flex-shrink: 0; min-width: 100%; max-height: 240px; object-fit: cover;" width="1440" height="1440" src="<%=blog.image%>" alt="blog-image"></a>
                         </div>
                         
                         <header class="entry-header">
                             
                             <!-- .entry-title -->
-                            <h2 class="entry-title"><a href="/blog/bai-viet/<%=blog.slug%>"><%=blog.title%></a></h2>
+                            <h2 class="entry-title"><a href="/blog/<%=blog.slug%>"><%=blog.title%></a></h2>
                             
                             <!-- .entry-meta -->
                             <div class="entry-meta">
@@ -60,7 +60,7 @@
                                     <time class="entry-date" datetime=""><%=moment(blog.createAt).format('LL'); %></time>
                                 </span>    
                                 <span>
-                                    <a href="/blog/bai-viet/<%=blog.slug%>"><%=blog.views%> Lượt xem</a>
+                                    <a href="/blog/<%=blog.slug%>"><%=blog.views%> Lượt xem</a>
                                 </span>
                             </div>
                         </header>
@@ -176,7 +176,7 @@
                                 <img style="max-width: 20%" src="<%=blog.image%>" alt="post-image" class="tptn_thumb">
                             </a> -->
                               <span class="tptn_after_thumb">
-                                  <a href="/blog/bai-viet/<%=blog.slug%>" class="tptn_link"><span class="tptn_title"><%=blog.title%></span></a>
+                                  <a href="/blog/<%=blog.slug%>" class="tptn_link"><span class="tptn_title"><%=blog.title%></span></a>
                                   <span style="color: rgb(110 110 110) !important" class="tptn_date">Lượt xem: <%=blog.views %></span> 
                               </span>
                           </li>
