--- a/views/pages/list-post-category.ejs
+++ b/views/pages/list-post-category.ejs
@@ -69,7 +69,7 @@
                         <div class="entry-content">
                           <p><%=blog.shortDesc ? blog.shortDesc.slice(0, 190).concat('...') : `Ở đây sẽ hiện short description Ở đây sẽ hiện short description Ở đây sẽ hiện short description Ở đây sẽ hiện short description Ở đây sẽ hiện short description...` %> 
                               <span class="more">
-                                  <a href="/blog/<%=blog._id %>" class="more-link">Đọc thêm</a>
+                                  <a href="/blog/<%=blog.slug %>" class="more-link">Đọc thêm</a>
                               </span>
                           </p>
                       
