--- a/views/pages/list-post.ejs
+++ b/views/pages/list-post.ejs
@@ -56,7 +56,7 @@
                         <div class="entry-content">
                           <p><%=blog.shortDesc ? blog.shortDesc.slice(0, 190).concat('...') : `Chào các bạn, mình là Đạt đây, hiện tại mình là một ITBA. Đây là blog nhằm chia sẻ các câu chuyện trong cuộc sống của mình cũng như chia sẻ các kiến thức bổ ích về lập trình và BA mà mình tích lũy được.` %> 
                               <span class="more">
-                                  <a href="/blog/<%=blog._id %>" class="more-link">Đọc thêm</a>
+                                  <a href="/blog/<%=blog.slug%>" class="more-link">Đọc thêm</a>
                               </span>
                           </p>
                       
