--- a/views/pages/footer.ejs
+++ b/views/pages/footer.ejs
@@ -140,7 +140,6 @@
                 </div>-->
                 <!-- widget-area -->
                 
-               
             
             </div>
             <!-- layout-medium -->
@@ -149,13 +148,11 @@
             <!-- .site-info -->
             <div class="site-info">
             	
-                <!-- layout-medium -->
             	<div class="layout-medium">
                 
-            		<div class="textwidget">crafted with <i class="pw-icon-heart"></i> <em>by</em> Pixelwars</div>
+            		<!-- <div class="textwidget">follow me <i class="pw-icon-heart"></i></div> -->
                 
                 </div>
-            	<!-- layout-medium -->
             
             </div>
             <!-- .site-info -->
