--- a/views/pages/header.ejs
+++ b/views/pages/header.ejs
@@ -8,8 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="title" content="Blog của Đạt">
     <meta name="description" content="Chúc bạn có trải nghiệm vui vẻ nhé!!">
-    <meta name="keywords" content="blog itba, itba, blog lap trinh">
-    <meta name="author" content="Pixelwars">
+    <meta name="keywords" content="business analyst, blog itba">
+    <meta name="author" content="tothanhdat">
 
     <meta property="og:url"                content="https://tothanhdat.com/" />
     <meta property="og:type"               content="article" />
@@ -95,7 +95,7 @@
                                 <!-- level 2 -->
                             </li>
                             
-                            <li><a href="/blog/62b9d312bef55b7a0c83084e">ABOUT ME</a></li>
+                            <li><a href="/blog/about-me">ABOUT ME</a></li>
 
                             <% CATEGORY.forEach(category => { %>
                                 <li class="menu-<%=category.id%>"><a href="/category/type/<%=category.id%>"><%=category.title %> </a></li>
