--- a/views/pages/info-post.ejs
+++ b/views/pages/info-post.ejs
@@ -106,7 +106,7 @@
                                 <!-- level 2 -->
                             </li>
                             
-                            <li><a href="/blog/62b9d312bef55b7a0c83084e">ABOUT ME</a></li>
+                            <li><a href="/blog/about-me">ABOUT ME</a></li>
 
                             <% CATEGORY.forEach(category => { %>
                                 <li><a href="/category/type/<%=category.id%>"><%=category.title %> </a></li>
