--- a/views/pages/list-post-category.ejs
+++ b/views/pages/list-post-category.ejs
@@ -144,7 +144,7 @@
             <h3 class="widget-title">About Me</h3>
             <div class="textwidget">
               <p><img src="/template/images/site/avatar_main_square.jpg" alt="avatar"></p>
-              <p>Xin chào! Mình là Đạt Tô, hiện tại mình là một ITBA. </p>
+              <p>Xin chào! Mình là Đạt Tô, hiện tại mình là một Business Analyst. </p>
               <p>Đây là blog nhằm chia sẻ các câu chuyện trong cuộc sống của mình cũng như chia sẻ các kiến thức bổ ích về lập trình và BA mà mình tích lũy được.</p>
             </div>
           </aside>
