add feature new word

--- a/public/template/css/768.css
+++ b/public/template/css/768.css
@@ -89,7 +89,7 @@
     
     /* FOOTER */
     .site-footer {
-        margin-top: 4em; padding-top: 2em;
+        padding-top: 2em;
         }
 	/* FOOTER SOCIAL */
 	.footer-social {
