--- a/views/pages/header.ejs
+++ b/views/pages/header.ejs
@@ -101,7 +101,8 @@
                                 <li class="menu-<%=category.id%>"><a href="/category/type/<%=category.id%>"><%=category.title %> </a></li>
                             <% }) %>
 
-                            <li><a href="/learning/new-vocabulary">Learning ENG</a></li>
+                            <!-- <li><a href="/learning/new-vocabulary">Learning ENG</a></li> -->
+                            <!-- <li><a href="/tools">Tools</a></li> -->
 
                         </ul>
                     </div>
