--- a/views/pages/footer.ejs
+++ b/views/pages/footer.ejs
@@ -25,7 +25,7 @@
                     </h1>
                     <!-- site-title -->
                     
-                    <p class="site-description">only need to be successful once</p>
+                    <p class="site-description">The simple things are sometimes the best things</p>
                 
                 </div>
                 <!-- site-title-wrap -->
