--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -17,7 +17,7 @@
                                 </div>  
                                 
                                 <h2><em>Hi.</em> I'm Dat</h2>
-                                <h3>I am a <strong>IT Business Analyst</strong> <strong>Fullstack Developer</strong></h3>
+                                <h3>I am a <strong>IT Business Analyst</strong> <strong>IT Business Analyst</strong></h3>
                                 
                                 <figure>
                                 	<a href="/blog/about-me"><img src="/template/images/site/about_me.jpg" alt="About Me"></a>
